Bug 173062 - Long Track or Artist name makes tab "Summary" in Tag Dialog clean.
Summary: Long Track or Artist name makes tab "Summary" in Tag Dialog clean.
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0-SVN
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-10-17 20:42 UTC by Andrey Esin
Modified: 2009-12-09 11:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Example file to test this bug (3.42 KB, audio/mpeg)
2008-10-17 20:44 UTC, Andrey Esin
Details
Patch to solve this problem (2.51 KB, patch)
2008-10-17 20:48 UTC, Andrey Esin
Details
Patch to solve this problem try 2 (2.46 KB, patch)
2008-10-30 12:24 UTC, Andrey Esin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrey Esin 2008-10-17 20:42:02 UTC
Version:           2.0-svn rev.872644 (using KDE 4.1.2)
Compiler:          gcc 4.2.4 
OS:                Linux
Installed from:    Ubuntu Packages

If file has long (more than 500 symbols) Track or Artist name and file added to playlist and you watch tab "Summary" in Tag Dialog you will see clean dialog without any buttons, tabs and other widgets.
To reproduce this bug i have made little mp3 file, which in attach.
And write little patch, may be, it will be useful.

P.S. I have never seen songs with so long names, but i think it is a bug :)
P.S.S May be, this bug, only on my computer....
Comment 1 Andrey Esin 2008-10-17 20:44:01 UTC
Created attachment 27977 [details]
Example file to test this bug

Add this file to playlist, open Tag Dialog and click on "Summary" if it's ok then this my bug, if it's clean it's bug of Amarok or QT :)
Comment 2 Andrey Esin 2008-10-17 20:48:03 UTC
Created attachment 27978 [details]
Patch to solve this problem

In this patch, long names will be truncate to more small names (truncCount is variable which determines how much symbols leave in name)
Comment 3 Mark Kretschmann 2008-10-17 21:07:30 UTC
Andrey, there is a simpler way to do this:

http://doc.trolltech.com/4.4/qfontmetrics.html#elidedText
Comment 4 Andrey Esin 2008-10-18 11:28:40 UTC
Oh...sorry :( I didn't know about this :(
Ok i will remake the patch, but i think elidedText not useful for this, because "width is specified in pixels, not characters", may be i mistaken...

So, did you reproduce this bug?
Comment 5 Lydia Pintscher 2008-10-28 22:42:01 UTC
What is the status of this?
Comment 6 Andrey Esin 2008-10-29 16:12:17 UTC
Nobody didn't confirm this bug :(
Comment 7 Mark Kretschmann 2008-10-29 19:21:16 UTC
Sorry Andrey, just tested it with your file: I can confirm it.

What happened was that I got one giant (full width of the screen) black filled rectangle. I had to kill Amarok to get rid of it. Pretty bad.

Comment 8 Andrey Esin 2008-10-30 12:24:10 UTC
Created attachment 28232 [details]
Patch to solve this problem try 2

Track Name or Album Name or Artist Name will stretch as much as possible in dialog with '...' in the end :)
Comment 9 Mark Kretschmann 2008-10-30 12:31:06 UTC
SVN commit 877787 by markey:

Fix for very long track or artist names messing up the tag dialog. Thanks to Andrey Esin <gmlastik@gmail.com> for the patch.

Andrey, as you've already contributed so many good patches, are you interested in getting a KDE SVN account?

BUG: 173062


 M  +14 -7     TagDialog.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=877787