Fix for very long track or artist names messing up the tag dialog. Thanks to Andrey Esin <gmlastik@gmail.com> for the patch.

Andrey, as you've already contributed so many good patches, are you interested in getting a KDE SVN account?

BUG: 173062

svn path=/trunk/extragear/multimedia/amarok/; revision=877787